--- a/docs/Developers Manual/parts/appendix.tex
+++ b/docs/Developers Manual/parts/appendix.tex
@@ -1,6 +1,79 @@
 \begin{appendix}
 
-\chapter{Minutes}
+\chapter{Meetings}
+The following tables are showing the protocolls of the held team meetings.
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_6}
+  \caption{meeting protocol no. 6}
+  \label{fig:meeting protocol no. 6}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_8}
+  \caption{meeting protocol no. 8}
+  \label{fig:meeting protocol no. 8}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_10}
+  \caption{meeting protocol no. 10}
+  \label{fig:meeting protocol no. 10}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_11}
+  \caption{meeting protocol no. 11}
+  \label{fig:meeting protocol no. 11}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_12}
+  \caption{meeting protocol no. 12}
+  \label{fig:meeting protocol no. 12}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_13}
+  \caption{meeting protocol no. 13}
+  \label{fig:meeting protocol no. 13}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_15}
+  \caption{meeting protocol no. 15}
+  \label{fig:meeting protocol no. 15}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_17}
+  \caption{meeting protocol no. 17}
+  \label{fig:meeting protocol no. 17}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_18}
+  \caption{meeting protocol no. 18}
+  \label{fig:meeting protocol no. 18}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_19}
+  \caption{meeting protocol no. 19}
+  \label{fig:meeting protocol no. 19}
+\end{figure}
+
+
 
 \chapter{Logged Time As Of March 11, 2012}
 
@@ -11,7 +84,6 @@ page.
 % should be updated later on, now simply to make sure it works
 % generate various reports in redmine and export as csv
 % don't forget to escape special characters like _ or # in the input .csv, e. g. \_ or \#
-
 
 \DTLloaddb{overview}{data/timelog-overview.csv}
 \begin{table}[htbp]
@@ -37,7 +109,7 @@ page.
 
 \end{landscape}
 
-\chapter{Mockups}
+\chapter{Mockups}\label{appendix:mockups}
 
 \section{Hand-Drawn}
 
@@ -113,7 +185,5 @@ page.
   \caption{Mockup – New report – digitalized }
   \label{fig:5newReportMockup}
 \end{figure}
-
-
 
 \end{appendix}
