--- a/docs/Developers Manual/Developers-Manual.tex
+++ b/docs/Developers Manual/Developers-Manual.tex
@@ -17,7 +17,8 @@
 \usepackage[babel]{csquotes}
 \usepackage{microtype}
 
-\usepackage[pdfborder={0 0 0}, breaklinks]{hyperref}
+\PassOptionsToPackage{hyphens}{url}
+\usepackage[pdfborder={0 0 0}, breaklinks, pdftex]{hyperref}
 \hypersetup{colorlinks, linkcolor={Blue}, citecolor={Blue}, urlcolor={Blue}}
 \urlstyle{same}
 
@@ -103,6 +104,7 @@
 \include{parts/plagiarism}
 \include{parts/requirements}
 \include{parts/developing-unplagged}
+\include{parts/summary-and-outlook}
 \include{parts/appendix}
 \bibliography{biblio}
 \end{document}
