Little proofreading of chapter 1

--- a/docs/Developers Manual/biblio.bib
+++ b/docs/Developers Manual/biblio.bib
@@ -37,7 +37,7 @@
 }
 
 @MISC{Trends,
-  author = {Built With Trends, dummy},
+  author = {Built With Trends, {}},
   title = {jQuery Usage Trends},
   howpublished = {\url{http://trends.builtwith.com/javascript/jQuery}},
   note = {[accessed online 01.03.12]},
@@ -109,3 +109,18 @@
    note = "[Online; accessed 20-March-2012]"
  }
  
+ @misc{ MerriamWebster,
+   author = "Merriam Webster, {}",
+   title = "plagiarize",
+   year = "2012",
+   url = "http://www.merriam-webster.com/dictionary/plagiarize",
+   note = "[Online; accessed 27-March-2012]"
+ }
+
+  @misc{ PlagiarismDotOrg,
+   author = "Plagiarism.org, {}",
+   title = "What is Plagiarism?",
+   year = "2012",
+   url = "http://www.plagiarism.org/plag_article_what_is_plagiarism.html",
+   note = "[Online; accessed 27-March-2012]"
+ }
