--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -1,39 +1,26 @@
 ﻿\chapter{A Plagiarism Primer}\label{chap:plagOverview}
-In this chapter we will give a brief overview of the most important topics to get you up to speed with the domain of the software, if you are not already familiar with it.
 
-\section{Plagiarism definition and history} 
+Here we will introduce you to the topics we encountered and researched in the beginning of the Unplagged project.
 
-Many people think of plagiarism as copying another's work, or borrowing someone else's original ideas. But terms like "copying" and "borrowing" can disguise the seriousness of the offense:
-According to the Merriam-Webster Online Dictionary, to "plagiarize" means:
+\section{Plagiarism definition and history}
 
-\begin{itemize}
-    \item to steal and pass off (the ideas or words of another) as one's own
-    \item to use (another's production) without crediting the source
-    \item to commit literary theft
-    \item to present as new and original an idea or product derived from an existing source.
-\end{itemize} 
+% Das können wir meiner Meinung nach so nicht lassen, wir können doch nicht die Definition von Plagiat abschreiben..
 
+You will probably have learned as a child, that stealing material goods is something that will get you arrested sooner or
+later. Somehow many people make a huge difference when it comes to intellectual property, maybe due to the fact that 
+stealing ideas or texts is much easier to do and much harder to catch.
 
-%(siehe http://www.plagiarism.org/plag_article_what_is_plagiarism.html)
+Nonetheless, this is something that would fall under copyright laws and is also a crime, which could get prosecuted.
 
-In other words, plagiarism is an act of fraud. It involves both stealing someone else's work and lying about it afterward.
-But can words and ideas really be stolen?
+Here is what \citet{PlagiarismDotOrg} thinks about plagiarism:
 
-According to U.S. law, the answer is yes. The expression of original ideas is considered intellectual property, and is protected by copyright laws, just like original inventions. Almost all forms of expression fall under copyright protection as long as they are recorded in some way (such as a book or a computer file).
-All of the following are considered plagiarism:
+\begin{quote}\enquote{
+Many people think of plagiarism as copying another's work, or borrowing someone else's original ideas. But terms like 
+\enquote{copying} and \enquote{borrowing} can disguise the seriousness of the offense: [...] In other words, plagiarism 
+is an act of fraud. It involves both stealing someone else's work and lying about it afterward.
+}
+\end{quote}
 
-\begin{itemize}
-   \item turning in someone else's work as your own
-   \item copying words or ideas from someone else without giving credit
-   \item failing to put a quotation in quotation marks
-  \item  giving incorrect information about the source of a quotation
-  \item  changing words but copying the sentence structure of a source without giving credit
-   \item copying so many words or ideas from a source that it makes up the majority of your work, whether you give credit or not (see our section on "fair use" rules)
-\end{itemize} 
-
-Most cases of plagiarism can be avoided, however, by citing sources. Simply acknowledging that certain material has been borrowed, and providing your audience with the information necessary to find that source, is usually enough to prevent plagiarism. See our section on citation for more information on how to cite sources properly.
-
-Plagiarism occurs when a student, with intent to deceive or with reckless disregard for proper scholarly procedures, presents any information, ideas or phrasing of another as if they were his/her own and/or does not give appropriate credit to the original source. Proper scholarly procedures require that all quoted material be identified by quotation marks or indentation on the page, and the source of information and ideas, if from another, must be identified and be attributed to that source. Students are responsible for learning proper scholarly procedures.
 %
 %---
 %Plagiarism and collusion in students' assessed work are issues of increasing con- cern to the academic community as a whole. By plagiarism we mean the sub mission of part or all of another person's work as if it were ones own, without the knowledge of the author, and with intention to deceive. Collusion, on the other hand is the submission of work as ones own when (at least some of) that work has been done partly or wholly by another person, and that other person is party to the deception.
@@ -107,16 +94,14 @@ Plagiarism occurs when a student, with intent to deceive or with reckless disreg
 %	
 	
 	
-
-	
-\newpage
 \section{Basic Classification of Plagiarisms}
 
-In this part, we will try to cover common classifications of plagiarism. First, we want to figure out the purpose of 
+In this part, we will try to cover common classifications of plagiarism, but at first we want to figure out the purpose of 
 the classification. 
 
 There are many reasons explaining why people plagiarize. Generally those include, that they didn't have the time,
-energy or the ability to do the work by themselves or that they try to steal other’s work on purpose with the hope that others
+energy or the ability to do the work by themselves or that they try to steal other’s work on purpose with the hope that 
+others
 will not recognize it. This kind of plagiarism is done intentionally and named \textit{deliberate 
 plagiarism}\citep{UEfAP}.
 
@@ -133,8 +118,9 @@ it gives them a common terminology, which enables them to communicate faster and
 It also helps them to realize what category and how many percent the text is plagiarized 
 if there is any suspicion, so that statistical data can be created.
 
-% I don't understand this sentence..
-So the classification is about the way to detect plagiarism while conducting a citation. But what is a citation, and 
+% I don't understand this sentence at all..
+%So the classification is about the way to detect plagiarism while conducting a citation. 
+But what is a citation, and 
 what kinds of citation are there? Understanding of citations and the way to cite is an important thing in order to 
 avoid and detect plagiarism.
 
@@ -162,12 +148,13 @@ That is the same as paraphrase, but this kind of citation is likely a summary of
 have to give the parenthetical referencing as well.
 \end{description}
 
-Now we can see that citation has a lot of forms. You are free to use the source but make sure to cite sources properly 
+Now we can see that citation has a lot of forms. You are free to use the source but you have to make sure to cite 
+sources properly 
 or you are applying a plagiarism.
 
 After understanding what citation is and its form, now we can try to classify the plagiarism. The criteria which we 
-choose for classification are based on the VroniPlag’s plagiarism categories, because this project is implemented 
-based on the workflow of the VroniPlag community. 
+choose for classification are based on the VroniPlag’s plagiarism categories, because Unplagged is mostly based 
+on the workflow of the VroniPlag community. 
 
 By VroniPlag, it does not matter what citation standard system is used in the work, but it is important to know how the 
 citation is documented and if the reference is given properly.
@@ -190,7 +177,7 @@ Source is not cited: the original text is completely copied but the source refer
 Source is cited but not completely: reference is given but not correctly.  
 
 \item[Verschleierung/Paraphrasing:]  \hfill \\
-The texts from different sources are rephrased and mixed together. The plagiariser try 
+The texts from different sources are rephrased and mixed together. The plagiariser tries 
 to hide his stealing by changing some word orders, replacing words with synonyms … The source is not given with the hope, 
 that the text is considerably generated by the plagiariser himself and therefore the plagiarism will not be detected.
 
@@ -223,9 +210,6 @@ The sentence or paragraph from one source is mixed with one from another source.
 plagiarism can be detected by changes of writing styles. Source reference is also not given properly.
 \end{description}
 
-
-
-\newpage
 \section{How to detect plagiarism}
 Plagiarism detection means a lot of effort and hard work, because a lot of documents, books and papers must be found, scanned and compared line for line. Often it is really complicated to find available sources in libraries or scientific database systems and plenty of pages must be copied by hand. 
 During the last ten years a lot of software companies came into market to automatize this process and developed algorithms to find plagiarisms automatically. These systems are called "Plagiarism detection systems (PDS) ". 
@@ -251,13 +235,6 @@ These computer assisted detection systems alone are not appropriate to find all 
 We found out that the most practical way is to combine both approaches - the first step is to use the computer-based detection to find similarities between the suspicious documents and the original papers. The second step is to examine the results, validate them and continue the search in a deeper level. (see figure 4 stage)
 
 (Culwin, Fintan; Lancaster, Thomas (2001), "Plagiarism issues for higher education", Vine 31 (2): 36-41, doi:10.1108/03055720010804005)
-
-
-
-
-\newpage
-
-
 
 \subsection{Commercial software systems} 
 
@@ -615,31 +592,6 @@ The 2010 test included not only short essays in German, but also ones in English
 The systems were categorized as partially useful, barely useful, and useless for university purposes. The best systems with between 60 and 70\% effectiveness are PlagAware, Turnitin, Ephorus, PlagScan and Urkund.
 
 Our recommendation: Only use these systems when suspicions of plagiarism arise that cannot be found with 3-5 words in a search machine. The focus should be on teaching students about plagiarism and how to avoid it instead of investing time in using software. Most of the work involved later is in preparing a plagiarism case and dealing with the plagiator, and for this good documentation is needed. Very few systems provide good documentation." (plagiats)
-
-
-
-
-\newpage
-\subsection{Free tools and techniques}
-
-	\textbf{simtext}
-	\textbf{Google-Search}
-
-	 \begin{figure}[!h]
-  \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{images/googlesearch.png}
-  }
-  \caption{Google Search}
-  \label{fig:Google Search}
-\end{figure}
-
-
-
-
-
-
-\newpage
 
 
 \section{Vroni Plag}
