--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -1,4 +1,4 @@
-\chapter*{Introduction}
+\chapter*{Introduction\footnote{Every plagiarism found in this paper is intended and left for the reader as an exercise ;-)}}
 \addcontentsline{toc}{chapter}{Introduction}
 %I didn't like, that the first two paragraphs started with "the" so I changed this again
 After Minister Guttenberg had to resign, because of the plagiarisms found in his doctoral thesis,
@@ -46,7 +46,7 @@ One of the biggest problems we faced at the start was, that none of the team mem
 text than a bachelors
 thesis and therefore the experience we got with actual scientific writing was very limited and very specific to the 
 field of computer science. We understand the ethical problems, that come with the betrayal of 
-good scientific practice of plagiators, but we simply can not relate easily to the amount of work that has to be put into 
+good scientific practice of plagiarists, but we simply can not relate easily to the amount of work that has to be put into 
 a PhD., or be as 
 passionate about plagiarism as Prof. Weber-Wulff always is, because we never experienced it ourselves.
 
@@ -58,11 +58,11 @@ not already familiar with it.
 
 Chapter \ref{chap:systemRequirements}, \nameref{chap:systemRequirements}, will be the place, where the development process is described and a collection and description 
 of the parts of the system, that already exist or that we identified as 
-necessary parts of Unplagged will be given. As the system is developed with an agile project management style, this will be done
-primarily based on the product backlog.
+necessary parts of Unplagged will be given.
 
 If you know all those things already and simply want to get started working and coding, you should probably jump
-to \ref{chap:developingUnplagged}, \nameref{chap:developingUnplagged}. This chapter will give the technical insights into the system, the basic installation
+to \ref{chap:developingUnplagged}, \nameref{chap:developingUnplagged}. This chapter will give the technical insights into 
+the system, the basic installation
 steps and all necessary tools for you as a developer.
 
 %And if this still isn't enough reading material for you, the appendices show you..
