Added original icons, some proofreading, basics for document parser text

--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -65,7 +65,8 @@ to \ref{chap:developingUnplagged}, \nameref{chap:developingUnplagged}. This chap
 the system, the basic installation
 steps and all necessary tools for you as a developer.
 
-%And if this still isn't enough reading material for you, the appendices show you..
+And if this still isn't enough reading material for you, in the appendices you can find the meeting minutes, some reports
+on the logged time in our project management tool and a collection of the mockups of the system.
 
 \section*{Conventions}
 \addcontentsline{toc}{section}{Conventions}
