Proofreading chapter 4. mostly

--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -1,6 +1,6 @@
-\chapter*{Introduction\footnote{Every plagiarism found in this paper is intended and left for the reader as an exercise ;-)}}
+\chapter*{Introduction\footnote{Every plagiarism found in this handbook is intended and left for the reader as an exercise ;-)}}
 \addcontentsline{toc}{chapter}{Introduction}
-%I didn't like, that the first two paragraphs started with "the" so I changed this again
+
 After Minister Guttenberg had to resign, because of the plagiarisms found in his doctoral thesis,
 the big media coverage and interest in plagiarism in Germany has very much subsided 
 \citep{Google2012}. However, the initial idea for the 
