--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -47,7 +47,7 @@ in solving the problems at hand.
   \label{fig:roadmap}
 \end{figure}
 
-What we are doing there is to map every \textit{Sprint} and the \textit{Product Backlog} to Redmine's notion of \enquote{Version} and
+What we are doing there, is to map every \textit{Sprint} and the \textit{Product Backlog} to Redmine's notion of \enquote{Version} and
 every identified \textit{User Story} to an \enquote{Issue}.
 
 You can see in figure \ref{fig:roadmap} the view of the roadmap, with the current sprint 5 designated to create this very
@@ -104,10 +104,10 @@ example from the VroniPlag group, which can be reached through their IRC channel
 
 % I think it's better to use present tense, because the meetings will continue
 The Unplagged version of the \textit{Daily Scrum} is currently a weekly meeting. Even though our meetings aren't daily, they 
-are still respecting the other characteristics of a \textit{Daily Scrum}. Each team member says what he did in 
-the last week and what he is going to do the next week. 
+are still respecting the other characteristics of a \textit{Daily Scrum}. Each team member says what was done in 
+the last week and what is going to be done the next week. 
 
-But those meetings are also the most problematic aspect of our version of Scrum, because the daily frequency of the 
+Those meetings are also the most problematic aspect of our version of Scrum, because the daily frequency of the 
 meetings normally 
 helps to let everybody know more about necessary changes in the logic of previously discussed ideas and makes the 
 process
@@ -118,10 +118,11 @@ Our projectteam was doing the meetings every monday for at least one hour. Most 
 if due to appointment collisions we couldn't manage to meet in person, we met in Skype. So we never used to skip the 
 weekly meeting.
 
-For each meeting that we held someone was responsible for writing the protocol about the meeting. For each protocol a 
-new wiki-page was created in \href{http://www.redmine.org/}{Redmine}. To put the protocols into this tool
+% protocol is not really the same in english as Protokoll in german
+For each meeting that we held someone was responsible for writing the minutes of the meeting. For each minutes a 
+new wiki-page was created in \href{http://www.redmine.org/}{Redmine}. To put them into this tool
 was really helpful for the teamwork, because everybody had access to it and could, 
-if necessary, have a look on the decisions which were made in the past.
+if necessary, have a look at the decisions which were made in the past.
 
 During the meetings at least these following points have been discussed:
 
@@ -131,12 +132,12 @@ During the meetings at least these following points have been discussed:
 \item Time estimates of user stories
 \item Organizational issues
 \item External dependency issues
-\item Problems encountered last week
+\item Problems encountered in the past
 \item Further questions
 \end{itemize}
 
-All the protocols which were made during the phase one are available in the appendix \ref{ch:minutes} 
-(page number \pageref{ch:minutes}).
+All the minutes which were made during the first semester of the project are available in the appendix \ref{ch:Meetings} 
+at page \pageref{ch:Meetings}.
 
 \section{Target Group}
 
@@ -158,8 +159,10 @@ This people are mostly not it-specialists, so it is important to focus on it dur
 
 \section{User roles}
 
-As the Unplagged system will provide a permission based user system, our goal is to make it possible, to create custom 
-user roles from an administration area and make it possible for users to have multiple user roles in one case and also different roles for different cases.
+As the Unplagged system will provide a permission based user system somewhere in the future, our goal is to make it 
+possible, to create custom 
+user roles from an administration area and make it possible for users to have multiple user roles in one case and also 
+different roles for different cases.
 The standard roles which will be provided by the system are:
 
 \begin{description}
@@ -401,7 +404,7 @@ the searchwords the user have to click on \enquote{Goolge-Suchwörter löschen}.
   \label{fig:contextmenu}
 \end{figure}
 
-\section{Document Parser}
+\subsection{Document Parser}
 
 The document parser is more of a background functionality that enables a user to input data into the system. 
 Essentially it is only an interface, that can be used to implement converters for different types of data, e. g images 
