fixing typos in chapter 4

--- a/docs/Developers Manual/parts/summary-and-outlook.tex
+++ b/docs/Developers Manual/parts/summary-and-outlook.tex
@@ -12,9 +12,9 @@ The application of a modified version of Scrum as our agile software development
 experience to all of us, but also took us some more time than expected to figure out. But with the use of Redmine for 
 keeping track of all 
 issues, repository changes and time logs, 
-everyone in the team is now able able to take a look on the current project state anytime.
+everyone in the team is now able to take a look on the current project state anytime.
 
-All in all, the conditions for a succesful development were allocated properly and we already have implemented some 
+All in all, the conditions for a successful development were allocated properly and we already have implemented some 
 features of the product backlog, that will be built upon in the next sprints.
 
 Problematic was, that the employed development processes were not as consistent as they should have been. The in 
@@ -32,7 +32,7 @@ we are thinking about setting up a second pre-staging environment which updates 
 automatically and 
 another more stable server, which can be updated manually via a script as soon as the pre-staging environment is tested properly. 
 
-Even though we wrote down some informations about the development process inside the Wiki of Redmine, most of the 
+Even though we wrote down some information about the development process inside the Wiki of Redmine, most of the 
 documentation as 
 represented in this document had to be 
 done in the end of the semester and not continuously during the process. 
